style.css
body {
  background: #e2e2e2;
  font-family: sans-serif;
}

#container, #colorsContainer {
  box-sizing: border-box;
  line-height: 0;
  text-align: center;
}

#colorsContainer div {
  width: 30px;
  height: 30px;
  margin: 2px;
  display: inline-block;
  box-sizing: border-box;
}

#colorsContainer div.active {
  border: 4px solid white;
}


#container {
  transition-duration: 10s;
}
.box {
  box-sizing: border-box;
  width: 15px;
  height: 15px;
  display: inline-block;
  border: 1px solid #e2e2e2;
  background-color: white;
  transition: background-color ease-out;
  transition-duration: inherit;
  border-radius: 50%;
}
.box:hover {
  transition: background-color 0s ease-in;
}
.box.black:hover {
  background-color: black;
}
.box.blue:hover {
  background-color: #0074D9;
}
.box.teal:hover {
  background-color: #39CCCC;
}
.box.yellow:hover {
  background-color: #FFDC00;
}
.box.orange:hover {
  background-color: #FF851B;
}
.box.pink:hover {
  background-color: #E91E63;
}

/* If there's anything shittier than styling input type=ranges, I want
 * to see it. */
input[type="range"] {
  -webkit-appearance: none;
  background-color: white;
  height: 5px;
  border-radius: 5px;
  margin: 0 auto;
}
input[type="range"]::-moz-range-track {
  background-color: white;
}
input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  background-color: #E91E63;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  cursor: pointer;
  transition: 0.3s ease-in-out;
}
input[type="range"]::-moz-range-thumb {
  background-color: #E91E63;
  width: 20px;
  height: 20px;
  border: 1px solid transparent;
  border-radius: 50%;
  cursor: pointer;
  transition: 0.3s ease-in-out;
}
input[type="range"]::-webkit-slider-thumb:active {
  transform: scale(1.6);
}
.slider-value {
  position: relative;
  color: white;
  line-height: 20px;
  text-align: center;
  border-radius: 3px;
  background: #E91E63;
  padding: 5px 10px;
  margin-left: 8px;
}
/* Pointy arrow bit */
.slider-value:after {
  position: absolute;
  top: 8px;
  left: -7px;
  width: 0;
  height: 0;
  border-top: 7px solid transparent;
  border-right: 7px solid #E91E63;
  border-bottom: 7px solid transparent;
  content: '';
}

